# pythondaq

./: README.md  arduino.py  pyproject.toml  water.csv
CLI/: Opdracht_61.py
GUI oefening/: Plottengui.py  gui_designer.ui  oefeningdesigner.py  oefeninggui.py  testaeval.py
controllers/: arduino_device.py
model/: model.py
src/pythondaq/: arduino.py
src/pythondaq/controllers/: arduino_device.py
src/pythondaq/models/: DiodeExperiment.py  PVExperiment.py  model.py
src/pythondaq/views/: applicatie.py  diode.py  eindopdracht.py  view.py
