[tool.poetry]
name = "pythondaq"
version = "0.1.0"
description = ""
authors = ["rugbym <94176296+rugbym@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numpy = "^1.21.4"
PyVISA = "^1.11.3"
pyserial = "^3.5"
click = "^8.0.3"
pandas = "^1.3.4"
asteval = "^0.9.25"
PyQt5 = "^5.15.6"
pyqtgraph = "^0.12.3"
lmfit = "^1.0.3"
PyVISA-py = "^0.5.2"

[tool.poetry.dev-dependencies]
matplotlib = "^3.5.0"
nsp2visasim = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
diode = 'pythondaq.views.diode:cmd_group'
diodeapp = 'pythondaq.views.applicatie:main'
eindopdracht = 'pythondaq.views.eindopdracht:main'